@@ -1,0 +1,13 @@
+<?xml version='1.0'?>
+<!DOCTYPE platform SYSTEM "simgrid.dtd">
+<platform version="2">
+  <!-- Platform -->
+  
+  <host id="toto" power="1000000"/>
+  <link id="lb" bandwidth="100000000" latency="0.000000"/>
+  <route src="toto" dst="toto"><link:ctn id="lb"/></route>
+  
+  <!-- Deployment -->
+  <process host="toto" function="send"/>
+  <process host="toto" function="receive"/>
+</platform>
